# AI_Agents

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FOLDER_STRUCTURE.md  PERFORMANCE.md  README.md  install_jarvis_auto.bat  pyproject.toml  requirements-dev.txt  requirements.txt  start_jarvis.bat  to do.md
.github/workflows/: ci.yml  dependency-check.yml  release.yml
audit_reports/: ACTION_PLAN.md  BUGS_AND_ERRORS.md  CODE_QUALITY_REPORT.md  CONFIG_DB_AUDIT.md  CPU_GPU_TELEMETRY_GAP.md  DEPENDENCY_RISKS.md  HEALTHCHECK_README_SNIPPET.md  SECURITY_AUDIT.md  STRUCTURE_AUDIT.md  TEST_MATRIX.md
config/: .env-example  jarvis_config.json  llm_config.yaml  logging.yaml  models.yaml  personality_config.json  personality_state.json  security.yaml
cookbook/: README.md  cross_office_workflows.py  excel_data_processing.py  excel_report_generator.py
data/models/: command_classifier.pkl
docs/: API_INTEGRATION_GUIDE.md  HARDWARE_REQUIREMENTS.md  PANDUAN_PENGGUNA.md  PANDUAN_UPGRADE_PYTHON.md  PROJECT_STRUCTURE.md  SECRETS.md  SECURITY.md  SECURITY_MODES.md  TROUBLESHOOTING.md
jarvis_env/Scripts/: activate  jsonpatch  numba
models/: preference_clusters.pkl  response_optimizer.pkl
scripts/: healthcheck.py  jarvis_main.py  run_tests.py
src/data/: .jarvis_initialized
src/windows_use/: config_loader.py  config_schema.py
src/windows_use/agent/: __init__.py
src/windows_use/desktop/: __init__.py  views.py
src/windows_use/evolution/: evaluator.py  memory.py  mutator.py
src/windows_use/examples/: jarvis_demo.py
src/windows_use/jarvis_ai/: __init__.py  conversation.py  dashboard.py
src/windows_use/llm/: __init__.py  evi_config.py  evi_handler.py  evi_streamer.py  model_registry.py  registry.py
src/windows_use/obs/: log_sanitizer.py
src/windows_use/office/: __init__.py
src/windows_use/security/: hitl.py  secret_store.py  voice_authentication.py
src/windows_use/tools/: ps_shell.py  tts_piper.py  voice_input.py
src/windows_use/utils/: __init__.py  device_telemetry.py  logger.py  rate_limit.py  retry.py  screenshot.py
src/windows_use/web/: __init__.py  browser_automation.py  search_engine.py  security_utils.py  voice_web_control.py  web_form_automation.py
tests/: test_config_validation.py  test_device_flags.py  test_integration.py  test_llm.py  test_log_sanitizer.py  test_powershell_wrapper.py  test_python312_upgrade.py  test_retry_rate_limit.py  test_security.py  test_web.py  test_web_security.py
windows_use_autonomous_agent/: .env  .gitignore  INSTALLATION_COMPLETE.md  MANIFEST.in  MODEL_ROUTER.md  PANDUAN_INSTALASI.md  PANDUAN_PENGGUNA.md  README.md  install_jarvis_auto.bat  main.py  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements-test.txt  requirements.txt  start_jarvis.bat  test_installation.py  test_integration.py
windows_use_autonomous_agent/.github/workflows/: ci.yml
windows_use_autonomous_agent/config/: .env  .env-example  jarvis_config.json  llm_config.yaml  personality_state.json
windows_use_autonomous_agent/cookbook/: powerpoint_builder.py  word_document_generator.py
windows_use_autonomous_agent/data/: .jarvis_initialized
windows_use_autonomous_agent/docs/: HARDWARE_REQUIREMENTS.md  JARVIS_README.md  KONFIGURASI.md  OPENROUTER_INTEGRATION.md  PANDUAN_INSTALASI.md  PROJECT_STRUCTURE.md  SECURITY_EVOLUTION.md  readme.md
windows_use_autonomous_agent/examples/: complete_demo.py  llm_demo.py
windows_use_autonomous_agent/jarvis_env/: pyvenv.cfg
windows_use_autonomous_agent/jarvis_env/Scripts/: activate.bat  automation.py  jsondiff  jsonpointer
windows_use_autonomous_agent/models/: command_classifier.pkl  preference_clusters.pkl  response_optimizer.pkl
windows_use_autonomous_agent/scripts/: jarvis_main.py  start_jarvis.bat
windows_use_autonomous_agent/src/windows_use/: __init__.py
windows_use_autonomous_agent/tests/: test_evolution.py  test_gui.py
windows_use_autonomous_agent/windows_use/: __init__.py  jarvis_main.py
windows_use_autonomous_agent/windows_use.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
windows_use_autonomous_agent/windows_use/evi/: __init__.py
(+73 files in other folders)
